--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.3.1",
+    "sass": "^1.70.0",
+    "tailwind-variants": "^0.1.20",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
